# kenpro-saas-store-back

./: .dockerignore  .env.example  .gitignore  Dockerfile  FRONTEND_DESIGN.md  db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  apps.py  managers.py  models.py  otp_channels.py  permissions.py  phone.py  serializers.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_pinresettoken.py  0003_passwordresettoken.py  0004_rename_token_fields.py  0005_plan_subscription_serviceflag.py  0006_pin_lockout.py  0007_tenantsettings.py  0008_user_must_change_password.py  0009_enable_pg_trgm.py  0010_otpcode.py
accounts/tests/: factories.py  test_api.py  test_services.py
crm/: admin.py  apps.py  models.py  serializers.py  services.py  views.py
crm/migrations/: 0001_initial.py  (+2 more)
inventory/: admin.py  apps.py  models.py  serializers.py  services.py  translation.py  urls.py  views.py
kenpro_store/: asgi.py  branding.py  celery.py  dashboard.py  db.py  enums.py  exception_handler.py  fiscal.py  middleware.py  pagination.py  responses.py  settings.py  urls.py  views.py  viewsets.py  wsgi.py
mobilemoney/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
notifications/: models.py  serializers.py  tasks.py  urls.py  views.py
repair/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
sales/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py  whatsapp.py
supplier/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tests/: factories.py
(+40 files in other folders)
